--- a/ReservationAdmin/Component/ReservationCreate.razor
+++ b/ReservationAdmin/Component/ReservationCreate.razor
@@ -8,57 +8,64 @@
 <form>
     <div style="background-color:#D5DAD7; float :left; width: 35%;  height: 100vh;">
         <p style="margin-left: 7%; color: #9597A6; font-size: 24px;padding-top: 5px;    margin-bottom: 5px;">Aanmaken reservering</p>
+        <div style="border-top: 1px solid;padding-bottom: 7px;   margin-left: 2%; width: 95%; color:#ffffff; "/>
+                <div id="divInfo">
+                    <h4>Gegevens</h4>
+                    <div style="padding: 30px; background-color: #ffffff;">
+                        <div class="form-inline  form-group">
+                            <label for="Name">Volledig naam</label>
 
-        <div style="border-top: 1px solid;padding-bottom: 7px;   margin-left: 2%; width: 95%; ">
-            <h4>Gegevens</h4>
-            <div style="padding: 30px; background-color: #ffffff;">
-                <div class="form-inline  form-group">
-                    <label for="Name">Volledig naam</label>
+                            <input type="text" class="form-controls" @bind="CreateGuest.FullName" aria-describedby="FullName" placeholder="Volledige naam" required />
 
-                    <input type="text" class="form-controls" @bind="CreateGuest.FullName" aria-describedby="FullName" placeholder="Volledige naam" required />
+                        </div>
+                        <div class="form-inline form-group ">
+                            <label for="Email" style="margin-right:10%;">Email </label>
+                            <input type="email" class="form-controls Email-field" @bind="CreateGuest.Email" aria-describedby="emailHelp" placeholder="Email adres" required />
 
-                </div>
-                <div class="form-inline form-group ">
-                    <label for="Email" style="margin-right:10%;">Email      </label>
-                    <input type="email" class="form-controls" @bind="CreateGuest.Email" aria-describedby="emailHelp" placeholder="Email adres" required />
+                        </div>
+                        <div class="form-inline  form-group">
+                            <label for="InputAmount">Aantal personen</label>
+                            <input type="number" class="form-control" @bind="CreateRes.Amount" aria-describedby="Amount" placeholder="6" min="1" max="6" required />
+                        </div>
 
-                </div>
-                <div class="form-inline  form-group">
-                    <label for="InputAmount">Aantal personen</label>
-                    <input type="number" class="form-control" @bind="CreateRes.Amount" aria-describedby="Amount" placeholder="6" min="1" max="6" required />
-                </div>
-
-            </div>
-
-            <div>
-                <h4>Dagdeel</h4>
-                <div class="Daypart-div">
-                    <div class="Daypart">
-                        <button type="button" @onclick="(e => SelectedDaypart(false))" class="btn Daypart-btn Daypart-btn-lunch">
-                            <h5>Lunch</h5>
-                            <p>11:00 - 16:00</p>
-                        </button>
-                        <button type="button" @onclick="(e=> SelectedDaypart(true))" class="btn Daypart-btn   Daypart-btn-diner">
-                            <h5>Dinner</h5>
-                            <p>17:00 - 20:00</p>
-                        </button>
                     </div>
-
-
                 </div>
-            </div>
+                <div id="divDaypart">
+                    <h4>Dagdeel</h4>
+                    <div class="Daypart-div">
+                        <div class="Daypart">
+                            <button type="button" @onclick="(e => SelectedDaypart(false))" class="btn Daypart-btn Daypart-btn-lunch">
+                                <h5>Lunch</h5>
+                                <p>11:00 - 16:00</p>
+                            </button>
+                            <button type="button" @onclick="(e=> SelectedDaypart(true))" class="btn Daypart-btn Daypart-btn-diner">
+                                <div>
+                                    <h5>Dinner</h5>
+                                    <p>17:00 - 20:00</p>
+                                </div>
+                            </button>
+                        </div>
+
+
+                    </div>
+                </div>
+
         </div>
 
-
-    </div>
-
-    <button type="submit" @onclick="CheckDoubleUser" class=" btn-ResAdmin btn btn-primary">
-        Reserveren
-    </button>
+        <button type="submit" @onclick="CheckDoubleUser" class=" btn-ResAdmin btn btn-primary">
+            Reserveren
+        </button>
 </form>
-<div class="Table-div">
+<div class="Table-div CHidden">
 
-    <h1>Tafel kiezen</h1>
+    <h4>Tafel kiezen</h4>
+    <div style="    border-top: 1px solid;
+    padding-bottom: 33px;
+
+    margin-left: 8%;
+    width: 76%;
+    color: #E6DBDA;" />
+
     <div class="Tafel   card-group" style=" background-image: url('images/tafel-van-zes.png');  width:500px; height:450px; margin-left: 69px; margin-bottom: 36px; ">
 
         <div style=" margin-left:21%; margin-top: 7%;">
@@ -109,7 +116,6 @@
             </button>
         </div>
     </div>
-
 </div>
 
 
@@ -121,7 +127,8 @@
     public string Message;
     Reservation CreateRes = new Reservation();
     Guest CreateGuest = new Guest();
-    public int Rese; 
+    public int Rese;
+
     //Check of mail correct is anders stuurt de
     bool IsValidEmail(string email)
     {
@@ -147,6 +154,7 @@
 
 
     }
+
     //Pak de waarde van geselecteerd dagdeel
     void SelectedDaypart(bool SelectedDaypart)
     {
@@ -160,29 +168,21 @@
             CreateRes.Daypart = "Dinner";
 
         }
-        TablesReset();
-        ReserveTable();
-        LessThenSixFourOrTwo();
+
+        if (CreateRes.Amount != 0)
+        {
+          CreateRes.Table = 0;
+            TablesReset();
+            ReserveTable();
+            LessThenSixFourOrTwo();
+        }
 
 
-    }
-     async Task TablesReset()
-    {
-        await JsRuntime.InvokeVoidAsync("ResetTables");
-    }
-    async Task LessThenSixFourOrTwo()
-    {
-        await JsRuntime.InvokeVoidAsync("Disabled", CreateRes.Amount);
-    }
-        //Gereserveerd Tafel
-    async Task DisabledReserved(int Tableres)
-    {
-        await JsRuntime.InvokeVoidAsync("ResetTables", Tableres);
-        await JsRuntime.InvokeVoidAsync("DisabledReserved", Tableres);
-    }
 
+    }
     void ReserveTable()
     {
+        CreateRes.date = DateTime.Now;
         //  SELECT `TableNumber` FROM `reservation` WHERE `Date`=@Date  AND `DayPart`=@Daypart
         con.SqlQuery("SELECT `TableNumber` FROM `reservation` WHERE `Date`=@Date  AND `DayPart`=@Daypart");
         con.Cmd.Parameters.AddWithValue("@Date", CreateRes.date.ToString("yyyy-MM-dd"));
@@ -192,6 +192,21 @@
             Rese = Convert.ToInt32(dr[0].ToString());
             DisabledReserved(Rese);
         }
+    }
+
+    async Task TablesReset()
+    {
+        await JsRuntime.InvokeVoidAsync("ResetTables");
+    }
+
+    async Task LessThenSixFourOrTwo()
+    {
+        await JsRuntime.InvokeVoidAsync("Disabled", CreateRes.Amount);
+    }
+    //Gereserveerd Tafel
+    async Task DisabledReserved(int Tableres)
+    {
+        await JsRuntime.InvokeVoidAsync("DisabledReserved", Tableres);
     }
 
     void CheckDoubleUser()
