--- a/CostumeTest/wwwroot/css/site.css
+++ b/CostumeTest/wwwroot/css/site.css
@@ -59,10 +59,6 @@ a {
     color: #fff;
 }
 
-.form-control, .form-controls {
-    margin-left: 10%;
-}
-
 .form-controls {
     height: calc(1.5em + .75rem + 2px);
     padding: .375rem .75rem;
@@ -201,10 +197,18 @@ h2 {
     padding: 1% 1% 4% 1%;
 }
 
+.Field-Name {
+    margin-left: 64px;
+}
 .Field-Email {
     margin-left: 20%;
 }
-
+.Field-Amount {
+    margin-left: 52px;
+}
+.amount-field {
+    margin-left: 69px;
+}
 /*Step line*/
 .btn-success p {
     display: none;
