--- a/ReservationAdmin/Component/ReservationCreate.razor
+++ b/ReservationAdmin/Component/ReservationCreate.razor
@@ -243,7 +243,7 @@
             con.Cmd.Parameters.AddWithValue("@Fullname", CreateGuest.FullName);
             con.Cmd.Parameters.AddWithValue("@Email", CreateGuest.Email);
             con.NonQueryEx();
-            InsertReservation();
+            CheckDoubleUser();
         }
 
 
