--- a/ReservationAdmin/Pages/Agenda.cshtml
+++ b/ReservationAdmin/Pages/Agenda.cshtml
@@ -7,7 +7,7 @@
     ViewData["Title"] = "Home page";
 }
 <div style=" float:left; height:100vh;  width: 17%; padding-left: 2%; background-color:#43425D;">
-    <a class="navbar-brand" asp-area="" asp-page="/Index" style="    color: #ffff;
+    <a class="navbar-brand" asp-area="" asp-page="/Index" style="    color: #ffffff;
     font-weight: bold;">Overzicht</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
